--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,4 +1,7 @@
-<div>
-	<p>{{platsannons.annons.annonsrubrik}}</p>
-	<img src="{{platsannonsLogo}}" />
-</div>
+<ul>
+    <li ng-repeat="message in messages">{{ message.from }}: {{ message.content }}</li>
+ </ul>
+  <form ng-submit="addMessage()">
+    <input type="text" ng-model="message">
+    <input type="submit" value="Add Message">
+  </form>
