--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,32 +1,15 @@
 <div class="container">
     
 
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Login</h3>
+  </div>
+  <div class="panel-body">
+    
+    <!-- Login form via email/password-->
     <div class="row">
-    	<h2 class="text-center">Login</h2>
-		<div class="row omb_row-sm-offset-3 omb_socialButtons">
-    	    <div class="col-xs-4 col-sm-2">
-		        <a href="#" class="btn btn-lg btn-block own_btn-facebook">
-			        <i class="fa fa-facebook visible-xs"></i>
-			        <span class="hidden-xs">Facebook</span>
-		        </a>
-	        </div>
-        	<div class="col-xs-4 col-sm-2">
-		        <a href="#" class="btn btn-lg btn-block own_btn-google">
-			        <i class="fa fa-google-plus visible-xs"></i>
-			        <span class="hidden-xs">Google+</span>
-		        </a>
-	        </div>	
-		</div>
-
-		<div class="row omb_row-sm-offset-3 omb_loginOr">
-			<div class="col-xs-12 col-sm-6 text-center">
-				<hr class="omb_hrOr">
-				<span>or Sign up</span>
-			</div>
-		</div>
-
-		<div class="row omb_row-sm-offset-3">
-			<div class="col-xs-12 col-sm-6">	
+			<div class="col-xs-12 col-sm-6 col-sm-offset-3">	
 			    <form class="omb_loginForm" action="" autocomplete="off" method="POST">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-user"></i></span>
@@ -38,21 +21,20 @@
 						<span class="input-group-addon"><i class="fa fa-lock"></i></span>
 						<input  type="password" class="form-control" name="password" placeholder="Password">
 					</div>
-                    <span class="help-block">Password error</span>
+                    <span class="help-block"></span>
 
 					<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
 				</form>
 			</div>
-    	</div>
-		<div class="row omb_row-sm-offset-3">
-			<div class="col-xs-12 col-sm-3">
-				<label class="checkbox">
-					<input type="checkbox" value="remember-me">Remember Me
-				</label>
+    </div>
+	<div class="row">
+			<div class="col-xs-6 col-sm-3 col-sm-offset-3">
+				<a href="#" ng-click="createUser()">Register</a>
 			</div>
-			<div class="col-xs-12 col-sm-3">	
+			<div class="col-xs-6 col-sm-3 text-right">	
 					<a href="#">Forgot password?</a>
 				</p>
 			</div>
-		</div>	    	
 	</div>
+	</div>
+</div>
