--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -10,20 +10,20 @@
     <!-- Login form via email/password-->
     <div class="row">
 			<div class="col-xs-12 col-sm-6 col-sm-offset-3">	
-			    <form class="omb_loginForm" action="" autocomplete="off" method="POST">
+			    <form  ng-submit="login()" action="" autocomplete="off" method="GET">
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-user"></i></span>
-						<input type="text" class="form-control" name="username" placeholder="email address">
+						<input type="text" class="form-control" name="username" ng-model="email" placeholder="email address">
 					</div>
 					<span class="help-block"></span>
 										
 					<div class="input-group">
 						<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-						<input  type="password" class="form-control" name="password" placeholder="Password">
+						<input  type="password" class="form-control" ng-model="password" name="password" placeholder="Password">
 					</div>
-                    <span class="help-block"></span>
+                    <span class="help-block">{{help_message}}</span>
 
-					<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+					<input class="btn btn-lg btn-primary btn-block" type="submit" value="Login"></input>
 				</form>
 			</div>
     </div>
