--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,7 +1,1 @@
-<ul>
-    <li ng-repeat="message in messages">{{ message.from }}: {{ message.content }}</li>
- </ul>
-  <form ng-submit="addMessage()">
-    <input type="text" ng-model="message">
-    <input type="submit" value="Add Message">
-  </form>
+<h1>Email: {{name}}</h1>
