--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -23,7 +23,7 @@
 					</div>
                     <span class="help-block">{{help_message}}</span>
 
-					<button class="btn btn-lg btn-primary btn-block" ng-click="login()">Login</button>
+					<button class="btn btn-lg btn-primary btn-block" ng-click="createUser()">Login</button>
 				</form>
 			</div>
     </div>
