--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,7 +1,19 @@
-<ul>
-    <li ng-repeat="message in messages">{{ message.from }}: {{ message.content }}</li>
- </ul>
-  <form ng-submit="addMessage()">
-    <input type="text" ng-model="message">
-    <input type="submit" value="Add Message">
-  </form>
+<!-- =========================== -->
+<!--            HEADER           -->
+<!-- =========================== --> 
+<div class="container-home">
+
+      <div id="descr">
+        <a class="logo" href="index.html#">GoodJob</a> 
+        <h2>GoodJob - The future of employment branding</h2>
+        <p class="description">
+          You have the design, you have the code. We ve created the product that will help your startup to look even better.
+        </p>
+        <p><a href="#getstarted" class="dl-btn btn-fill btn-stretch" href="index.html#page-0">Get started</a></p>            
+        <p class="dl-btn-group">
+          <a href="#register" class="dl-btn btn-stroke btn-left-stretch"><i class="fa fa-user-plus"></i>Register</a>
+          <a href="#login" class="dl-btn btn-stroke btn-right-stretch"><i class="fa fa-check-square-o"></i>Login</a>
+        </p>
+      </div>
+   
+    </div>
