--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -9,7 +9,7 @@
         <p class="description">
           You have the design, you have the code. We ve created the product that will help your startup to look even better.
         </p>
-        <p><a href="#getstarted" class="dl-btn btn-fill btn-stretch" href="index.html#page-0">Get started</a></p>            
+        <p><a href="#available-jobs" class="dl-btn btn-fill btn-stretch" href="index.html#page-0">Get started</a></p>            
         <p class="dl-btn-group">
           <a href="#register" class="dl-btn btn-stroke btn-left-stretch"><i class="fa fa-user-plus"></i>Register</a>
           <a href="#login" class="dl-btn btn-stroke btn-right-stretch"><i class="fa fa-check-square-o"></i>Login</a>
