--- a/app/css/style.css
+++ b/app/css/style.css
@@ -31,6 +31,9 @@
 		text-decoration: none;
 	}
 
+	img{
+		width:100%;
+	}
 	.container {
 	  max-width: 1140px;
 	  background-color: #ffffff !important;
