--- a/app/css/style.css
+++ b/app/css/style.css
@@ -34,6 +34,12 @@
 	img{
 		width:100%;
 	}
+	.profile-img{
+		width:100%;
+		max-width: 150px;
+		height:100%;
+		max-height: 150px;
+	}
 	.container {
 	  max-width: 1140px;
 	  background-color: #ffffff !important;
