--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,10 +1,5 @@
 	body {
 		font: 16px/1.5 Lato, "Century Gothic", "Trebuchet MS", Helvetica, sans-serif;
-		background-image: url("../img/bg-2.jpg");
-		 background-attachment: fixed;
-		  background-repeat: no-repeat;
-		  background-size: cover;
-		  -moz-background-size: cover;
 		  height:100%;
 		font-weight: 300;
 		-webkit-font-smoothing: antialiased;
@@ -29,6 +24,14 @@
 		outline: 0;
 		border: 0;
 		text-decoration: none;
+	}
+
+	.app-content{
+		background-image: url("../img/bg-2.jpg");
+		 background-attachment: fixed;
+		  background-repeat: no-repeat;
+		  background-size: cover;
+		  -moz-background-size: cover;
 	}
 
 	img{
