New Navbar and CSS fixes
updated view

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,11 +1,29 @@
+
 	body {
 		font: 16px/1.5 Lato, "Century Gothic", "Trebuchet MS", Helvetica, sans-serif;
 		  height:100%;
 		font-weight: 300;
 		-webkit-font-smoothing: antialiased;
 		text-rendering: optimizeLegibility;
+		background-image: url("../img/bg-2.jpg");
+		 background-attachment: fixed;
+		  background-repeat: no-repeat;
+		  background-size: cover;
+		  -moz-background-size: cover;
 	}
 
+
+.container {
+  	background-color:#ffffff;
+  	padding:20px;
+  	margin-top:-20px;
+  	min-height: 100%;
+   width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
+	
+}
 
 	a { 
 		color: #4fc1e9;
@@ -26,16 +44,28 @@
 		text-decoration: none;
 	}
 
-	.app-content{
-		background-image: url("../img/bg-2.jpg");
-		 background-attachment: fixed;
-		  background-repeat: no-repeat;
-		  background-size: cover;
-		  -moz-background-size: cover;
+
+
+	.col-xs-6 {
+	  width: 50%;
+	   padding-left: 15px;
+  		padding-right: 15px;
+	}
+	.section{
+		margin-right: auto;
+	  margin-left: auto;
+	  padding-left: 15px;
+	  padding-right: 15px;
+	  background: #fff;
+	  padding-top: 10px;
+	  padding-bottom: 10px;
 	}
 
 	img{
 		width:100%;
+	}
+	.img{
+		width:150px;
 	}
 	.profile-img{
 		width:100%;
@@ -47,6 +77,7 @@
 	  max-width: 1140px;
 	  background-color: #ffffff !important;
 	}
+
 	/* =================================== */
 	/*              Typography             */
 	/* =================================== */
@@ -76,7 +107,7 @@
 	p{
 		font-size: 18px;
 		font-weight: 300;
-		color: #7f8c8d;
+		color: #5c5c5c;
 		letter-spacing: 0.03em;
 	}
 	/* =================================== */
@@ -215,13 +246,13 @@
 	=================================== */
 
 	#descr{
-		float:left;
-		position:absolute;
+	
 		bottom:10%;
 		display:inline-block;
 		text-align:center;
 		padding:6% 7% 8% 7%;
 		width:53.22916666666667%;
+		  float: none;
 	}
 	#descr h2{
 		color: #fff;
@@ -393,7 +424,7 @@
 
 /* Device size - header*/
 
-@media screen and (max-height: 1240px) {
+@media screen and (min-height: 1240px) {
 
 	
 }
@@ -512,8 +543,6 @@
 	}
 
 	
-	
-
 }
 
 
