--- a/app/css/style.css
+++ b/app/css/style.css
@@ -4,20 +4,15 @@
 		font-weight: 300;
 		-webkit-font-smoothing: antialiased;
 		text-rendering: optimizeLegibility;
-		background-image: url("../img/bg-2.jpg");
-		 background-attachment: fixed;
-		  background-repeat: no-repeat;
-		  background-size: cover;
-		  -moz-background-size: cover;
-	}
 
-.container {
-  	background-color:#ffffff;
-  	padding:20px;
-  	margin-top:-20px;
-  	min-height: 100%;
-	
-}
+	}
+	.container {
+	  	background-color:#ffffff;
+	  	padding:20px;
+	  	margin-top:-20px;
+	  	min-height: 100%;
+		
+	}
 	a { 
 		color: #4fc1e9;
 		transition: all 0.125s ease-in-out 0s;
@@ -50,7 +45,7 @@
 	  background: #fff;
 	  padding-top: 10px;
 	  padding-bottom: 10px;
-}
+	}
 	img{
 		width:100%;
 	}
@@ -63,9 +58,14 @@
 		height:100%;
 		max-height: 150px;
 	}
-	.container {
-	  max-width: 1140px;
-	  background-color: #ffffff !important;
+	.container-home{
+	
+	   	background-image: url("../img/bg-2.jpg");
+		 background-attachment: fixed;
+		  background-repeat: no-repeat;
+		  background-size: cover;
+		  -moz-background-size: cover;
+
 	}
 	/* =================================== */
 	/*              Typography             */
